added rules/macro for type matching at arrow

--- a/macros.tex
+++ b/macros.tex
@@ -96,3 +96,5 @@
 \newcommand{\refrule}[1]{\textrm{Rule~(#1)}}
 
 \newcommand{\herase}[1]{\left|#1\right|_\textsf{erase}}
+
+\newcommand{\arrmatch}[2]{#1 \blacktriangleright_{\rightarrow} #2}
