--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,20 @@
+@book{pfpl,
+	Author = {Harper, Robert},
+	Title = {{Practical Foundations for Programming Languages}},
+	Edition={2nd},
+  Publisher = {Cambridge University Press},
+	_note={(Working Draft, Retrieved Nov. 19, 2015)},
+	Year={2016},
+	Url={https://www.cs.cmu.edu/~rwh/plbook/2nded.pdf}
+}
+
+@misc{bidi-tutorial,
+  author = {David Raymond Christiansen},
+  Howpublished = {\url{http://davidchristiansen.dk/tutorials/bidirectional.pdf}},
+  Title = {{Bidirectional Typing Rules: A Tutorial}},
+  Year = {2013}
+}
+
 @article{mens2004survey,
   title={A survey of software refactoring},
   author={Mens, Tom and Tourw{\'e}, Tom},
