--- a/formally.tex
+++ b/formally.tex
@@ -7,21 +7,22 @@ The previous section introduced Hazelnut by example. In this section, we systema
 \item \textbf{Actions} (Sec. \ref{sec:actions}), which act relative to the cursor according to Hazelnut's \textbf{bidirectionally typed action semantics}. The action semantics enjoys a rich metatheory. Of particular note, the \emph{sensibility theorem} establishes that every edit state is well-typed after cursor erasure.
 \end{itemize}
 
-Our overview below omits certain ``uninteresting'' details. The supplement includes the complete collection of rules, in definitional order. These rules, along with the proofs of the metatheorems, have been mechanized using Agda \cite{norell:thesis}, also in the supplement. We will summarize this effort in Sec. \ref{sec:mech}.% The supplement contains the Agda sources and additional technical details.
+Our overview below omits certain ``uninteresting'' details. The supplement includes the complete collection of rules, in definitional order. These rules, along with the proofs of the metatheorems, have been mechanized in Agda \cite{norell:thesis}, also in the supplement. We will summarize this effort in Sec. \ref{sec:mech}.% The supplement contains the Agda sources and additional technical details.
 
 \subsection{Holes}\label{sec:holes}
 
 
-The syntax of H-types and H-expressions is given in Figure \ref{fig:hexp-syntax}. Most of the forms correspond directly to those of the simply-typed lambda calculus extended with type $\tnum$. The number expression corresponding to the number $n$ is drawn $\hnum{n}$, and for simplicity, we define only a single arithmetic operation, $\hadd{\hexp}{\hexp}$.
-In addition to these standard forms, \emph{empty holes} are drawn $\hehole$ and \emph{non-empty H-expression holes} are drawn $\hhole{\hexp}$. In our simple calculus, all well-formed type expressions are valid types, so we do not need non-empty H-type holes.%Holes mark subterms that are, notionally, ``under construction.'' We will see what this formally corresponds to in a moment.
+Figure \ref{fig:hexp-syntax} defines the syntax of H-types and H-expressions. Most forms correspond directly to those of the simply typed lambda calculus (STLC) extended with a single base type, $\tnum$, of numbers (cf. \cite{pfpl}.) The number expression corresponding to the mathematical number $n$ is drawn $\hnum{n}$, and for simplicity, we define only a single arithmetic operation, $\hadd{\hexp}{\hexp}$. The form $\hexp : \htau$ is an explicit \emph{type ascription}. 
+
+In addition to these standard forms, \emph{type holes} and \emph{empty expression holes} are both drawn $\hehole$ and \emph{non-empty expression holes} are drawn $\hhole{\hexp}$. In our simple calculus, all well-formed H-types are valid classifiers of expressions, so we do not need non-empty type holes. Types and expressions that do not contain holes are \emph{complete types} and \emph{complete expressions}, respectively. Formally, we can derive $\hcomplete{\htau}$ when $\htau$ is complete, and $\hcomplete{\hexp}$ when $\hexp$ is complete. The rules are omitted here. We will not define a dynamics for Hazelnut explicitly, but the dynamics for complete H-expressions would be entirely standard (in Sec. \ref{sec:future} we discuss the multi-dimensional design space around the question of evaluating incomplete H-expressions.)% The complete types and expressions correspond immediately to the types and expressions of the STLC with numbers. %Holes mark subterms that are, notionally, ``under construction.'' We will see what this formally corresponds to in a moment.
 
 \begin{figure}[t]
 $\arraycolsep=4pt\begin{array}{lllllll}
-\mathsf{HTyp} & \tau,\htau & ::= &
+\mathsf{HTyp} & \htau & ::= &
   \tarr{\htau}{\htau} ~\vert~
   \tnum ~\vert~
   \tehole\\
-\mathsf{HExp} & e,\hexp & ::= &
+\mathsf{HExp} & \hexp & ::= &
   \hexp : \htau ~\vert~
   x ~\vert~
   \hlam{x}{\hexp} ~\vert~
@@ -36,23 +37,113 @@ $\arraycolsep=4pt\begin{array}{lllllll}
 \label{fig:hexp-syntax}
 \end{figure}
 
-We refer to terms that do not contain subterms of hole form as \emph{complete}. Informally, we will use metavariables $\tau$ and $e$ rather than $\htau$ and $\hexp$ for complete H-types and H-expressions, respectively. Formally, we can derive $\hcomplete{\tau}$ when $\tau$ is a complete H-type, and $\hcomplete{e}$ when $e$ is a complete H-expression. We omit the straightforward definitions of these judgements for concision. The dynamics of Hazelnut, which we need not detail here, is defined only  over complete H-expressions (i.e. we can only ``run'' a complete program, though see Sec. \ref{sec:future}.)\todo{get rid of e/edot distinction}\todo{change this to refer to dynamics section}
-
-The statics of Hazelnut is organized as a \emph{bidirectional type system} \cite{Pierce:2000:LTI:345099.345100}, i.e. around the following mutually defined typing judgements:
+The statics of Hazelnut is organized as a \emph{bidirectional type system} \cite{Pierce:2000:LTI:345099.345100,bidi-tutorial} around the following mutually defined typing judgements:
 \[\arraycolsep=15pt\begin{array}{ll}
 %\textbf{Judgement Form} & \textbf{Description}\\
 \hana{\hGamma}{\hexp}{\htau} & \text{$\hexp$ analyzes against $\htau$}\\
 \hsyn{\hGamma}{\hexp}{\htau} & \text{$\hexp$ synthesizes $\htau$}
 \end{array}\]
-where typing contexts, $\hGamma$, map each variable $x \in \domof{\hGamma}$ to a hypothesis $x : \htau$.
-Derivations of the type analysis judgement establish that $\hexp$ can appear where an expression of type $\htau$ is expected. Derivations of the type synthesis judgement determine a type that can be assigned to $\hexp$ even in positions where an expected type is not known (e.g. at the top level.) Algorithmically, the type is an ``input'' of the type analysis judgement, but an ``output'' of the type synthesis judgement. %The rules describe a \emph{local type inference} scheme, i.e. type ascriptions are unnecessary when an expression is being analyzed against a known type.
-Making a judgemental distinction between these two notions will be essential for giving a sensible action semantics to our system (Sec. \ref{sec:actions}.)
+where typing contexts, $\hGamma$, map each variable $x \in \domof{\hGamma}$ to a hypothesis $x : \htau$ in the usual manner. Derivations of the type analysis judgement establish that $\hexp$ can appear where an expression of type $\htau$ is expected. Derivations of the type synthesis judgement infer a type from $\hexp$, which is necessary in positions where an expected type is not available (e.g. at the top level.) Algorithmically, the type is an ``input'' of the type analysis judgement, but an ``output'' of the type synthesis judgement. %The rules describe a \emph{local type inference} scheme, i.e. type ascriptions are unnecessary when an expression is being analyzed against a known type.
+Making a judgemental distinction between these two notions will be essential in our action semantics (Sec. \ref{sec:actions}.)
 
  %We use the metavariable $\Gamma$ for \emph{complete typing contexts}, i.e. typing contexts where each hypothesis mentions only complete types.
 
 
+\begin{figure}
+\noindent\fbox{$\tcompat{\htau}{\htau'}$}
+% \begin{subequations}%\label{rules:tcompat}
+% \begin{equation}%\label{rule:tcompat-comm}
+% \inferrule
+% %[TCSym]
+% {
+%   \tcompat{\htau}{\htau'}
+% }{
+%   \tcompat{\htau'}{\htau}
+% }
+% \end{equation}
+\begin{mathpar}
+\inferrule{ }{
+  \tcompat{\tehole}{\htau}
+}
+
+% \end{equation}
+% \begin{equation}%\label{rule:tcompat-hole}
+\inferrule{ }{
+  \tcompat{\htau}{\tehole}
+}
+
+\inferrule{ }{
+  \tcompat{\htau}{\htau}
+}
+
+\inferrule{
+  \tcompat{\htau_1}{\htau_1'}\\
+  \tcompat{\htau_2}{\htau_2'}
+}{
+  \tcompat{\tarr{\htau_1}{\htau_2}}{\tarr{\htau_1'}{\htau_2'}}
+}
+\end{mathpar}
+% \begin{equation}%\label{rule:tcompat-num}
+% \end{equation}
+% \begin{equation}%\label{rule:tcompat-arr}
+% \end{equation}
+% \end{subequations}
+\fbox{$\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$}
+\begin{mathpar}
+% \begin{subequations}
+% \begin{equation}
+\inferrule{ }{
+  \arrmatch{\tarr{\htau_1}{\htau_2}}{\tarr{\htau_1}{\htau_2}}
+}
+
+% \end{equation}
+% \begin{equation}
+\inferrule{ }{
+  \arrmatch{\tehole}{\tarr{\tehole}{\tehole}}
+}
+% \end{equation}
+% \end{subequations}
+\end{mathpar}
+% \noindent\fbox{$\tincompat{\htau}{\htau'}$}
+% \begin{subequations}
+%   % \begin{equation}
+%   %   \inferrule{
+%   %     \tincompat{\htau}{\htau'}
+%   %   }{
+%   %     \tincompat{\htau'}{\htau}
+%   %   }
+%   % \end{equation}
+%   \begin{equation}
+%     \inferrule{ }{
+%       \tincompat{\tarr{\htau_1}{\htau_2}}{\tnum}
+%     }
+%   \end{equation}
+%   \begin{equation}
+%     \inferrule{ }{
+%       \tincompat{\tnum}{\tarr{\htau_1}{\htau_2}}
+%     }
+%   \end{equation}
+%   \begin{equation}
+%     \inferrule{
+%       \tincompat{\htau_1}{\htau_1'}
+%     }{
+%       \tincompat{\tarr{\htau_1}{\htau_2}}{\tarr{\htau_1'}{\htau_2'}}
+%     }
+%   \end{equation}
+%   \begin{equation}
+%     \inferrule{
+%       \tincompat{\htau_2}{\htau_2'}
+%     }{
+%       \tincompat{\tarr{\htau_1}{\htau_2}}{\tarr{\htau_1'}{\htau_2'}}
+%     }
+%   \end{equation}
+% \end{subequations}
+\caption{Type consistency and type matching at arrow.}
+\label{fig:type-consistency}
+\end{figure}
+
 \begin{subequations}\label{rules:syn-ana}
-Type synthesis is stronger than type analysis in that if an expression is able to synthesize a type, it can also be analyzed against that type, or any \emph{compatible} type. This is expressed by the \emph{subsumption rule}:
+Type synthesis is stronger than type analysis in that if an expression is able to synthesize a type, it can also be analyzed against that type, or any other \emph{consistent} type, according to the following \emph{subsumption rule}:
 \begin{equation}\label{rule:ana-subsume}
 \inferrule{
   \hsyn{\hGamma}{\hexp}{\htau'}\\
@@ -61,10 +152,9 @@ Type synthesis is stronger than type analysis in that if an expression is able t
   \hana{\hGamma}{\hexp}{\htau}
 }
 \end{equation}
-The \emph{H-type compatibility judgement}, $\tcompat{\htau}{\htau'}$, reduces to syntactic equality for complete H-types. For incomplete H-types, the rules are given after we discuss the semantics of holes below.
+The \emph{H-type consistency relation}, $\tcompat{\htau}{\htau'}$, reduces to equality for complete H-types. We discuss its purpose with regard to incomplete H-types when we discuss the semantics of holes below. First, let us briefly review the standard constructs.
 
-First, let us briefly review the standard constructs.
-Type ascription allows the user to state  a type for the ascribed expression to be analyzed against:
+Type ascription allows the user to explicitly state  a type for the ascribed expression to be analyzed against:
 \begin{equation}\label{rule:syn-asc}
 \inferrule{
   \hana{\hGamma}{\hexp}{\htau}
@@ -73,32 +163,43 @@ Type ascription allows the user to state  a type for the ascribed expression to 
 }
 \end{equation}
 
-A variable synthesizes the type that the context assigns to it:
+A variable synthesizes the hypothesized type:
 \begin{equation}\label{rule:syn-var}
 \inferrule{ }{
   \hsyn{\hGamma, x : \htau}{x}{\htau}
 }
 \end{equation}
 
-Functions are not themselves annotated with types, so they can only appear in analytic position:
+Lambda abstractions are not themselves annotated, so they can appear only in analytic position:
 \begin{equation}\label{rule:syn-lam}
 \inferrule{
+  \arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}\\
   \hana{\hGamma, x : \htau_1}{\hexp}{\htau_2}
 }{
-  \hana{\hGamma}{\hlam{x}{\hexp}}{\tarr{\htau_1}{\htau_2}}
+  \hana{\hGamma}{\hlam{x}{\hexp}}{\htau}
 }
 \end{equation}
-It would be straightforward to also add a ``half-annotated'' lambda form, $\lambda x{:}\tau.e$, but for simplicity, we leave it out of our calculus \cite{DBLP:conf/tldi/ChlipalaPH05}.
+It is possible to also define a ``half-annotated'' lambda form, $\lambda x{:}\tau.e$, but for simplicity, we leave it out \cite{DBLP:conf/tldi/ChlipalaPH05}.
 
-For function application, if the expression in function position synthesizes an arrow type, the argument is analyzed against the synthesized argument type:
+When applying a function, if the expression in function position synthesizes an arrow type, the argument is analyzed against the synthesized argument type:
+% \begin{equation}\label{rule:syn-ap}
+% \inferrule{
+%   \hsyn{\hGamma}{\hexp_1}{\tarr{\htau_2}{\htau}}\\
+%   \hana{\hGamma}{\hexp_2}{\htau_2}
+% }{
+%   \hsyn{\hGamma}{\hap{\hexp_1}{\hexp_2}}{\htau}
+% }
+% \end{equation}
 \begin{equation}\label{rule:syn-ap}
 \inferrule{
-  \hsyn{\hGamma}{\hexp_1}{\tarr{\htau_2}{\htau}}\\
+  \hsyn{\hGamma}{\hexp_1}{\htau}\\
+  \arrmatch{\htau}{\tarr{\htau_2}{\htau'}}\\
   \hana{\hGamma}{\hexp_2}{\htau_2}
 }{
-  \hsyn{\hGamma}{\hap{\hexp_1}{\hexp_2}}{\htau}
+  \hsyn{\hGamma}{\hap{\hexp_1}{\hexp_2}}{\htau'}
 }
 \end{equation}
+
 
 Numbers synthesize type $\tnum$:
 \begin{equation}\label{rule:syn-num}
@@ -126,7 +227,7 @@ The empty hole synthesizes the hole type:
 }
 \end{equation}
 
-A non-empty hole contains an H-expression that is ``under construction''. The inner expression must synthesize some type, but the non-empty hole synthesizes only the hole type:
+A non-empty hole contains an H-expression that is ``under construction'', as described in Sec. \ref{sec:example}. The  expression inside the hole must synthesize some type, but, like the empty hole, the non-empty hole synthesizes only the hole type:
 \begin{equation}\label{rule:syn-hole}
 \inferrule{
   \hsyn{\hGamma}{\hexp}{\htau}
@@ -134,14 +235,16 @@ A non-empty hole contains an H-expression that is ``under construction''. The in
   \hsyn{\hGamma}{\hhole{\hexp}}{\tehole}
 }
 \end{equation}
-The type compatibility judgement $\tcompat{\htau}{\htau'}$, which appeared as a premise in the subsumption rule, makes the hole type compatible with any other type:
+The type consistency judgement $\tcompat{\htau}{\htau'}$, which appeared as a premise in the subsumption rule, makes the hole type compatible with any other type:
 \begin{subequations}\label{rules:tcompat}
 \begin{equation}\label{rule:tcompat-hole}
 \inferrule{ }{
   \tcompat{\htau}{\tehole}
 }
 \end{equation}
-The remaining rules, given in the appendix, establish that type compatibility is symmetric and reflexive (but not transitive.)
+\end{subequations}
+The remaining rules, given in the appendix, establish that type consistency is symmetric and reflexive (but not transitive.)
+
 % \begin{equation}\label{rule:tcompat-comm}
 % \inferrule{
 %   \tcompat{\htau}{\htau'}
@@ -162,18 +265,18 @@ The remaining rules, given in the appendix, establish that type compatibility is
 %   \tcompat{\tarr{\htau_1}{\htau_2}}{\tarr{\htau_1'}{\htau_2'}}
 % }
 % \end{equation}
-\end{subequations}
-Consequently, by subsumption, we can derive that $\hana{id : \tarr{\tnum}{\tnum}}{\hhole{id}}{\tnum}$, as is necessary to synthesize a type for the H-expression on Line 14 of Fig. \ref{fig:first-example}. %In other words, this mechanism is essential if  users are to able to construct a program in anything but an ``outside in'' fashion.
 
-The final rule handles function applications where the expression in function position synthesizes a hole type, rather than an arrow type. We treat it as if it had instead synthesized $\tarr{\tehole}{\tehole}$:
-\begin{equation}\label{rule:syn-ap-2}
-\inferrule{
-  \hsyn{\hGamma}{\hexp_1}{\tehole}\\
-  \hana{\hGamma}{\hexp_2}{\tehole}
-}{
-  \hsyn{\hGamma}{\hap{\hexp_1}{\hexp_2}}{\tehole}
-}
-\end{equation}
+Taken we can derive that $\hana{id : \tarr{\tnum}{\tnum}}{\hhole{id}}{\tnum}$, as is necessary to synthesize a type for the H-expression on Line 14 of Fig. \ref{fig:first-example}. %In other words, this mechanism is essential if  users are to able to construct a program in anything but an ``outside in'' fashion.
+
+% The final rule handles function applications where the expression in function position synthesizes a hole type, rather than an arrow type. We treat it as if it had instead synthesized $\tarr{\tehole}{\tehole}$:
+% \begin{equation}\label{rule:syn-ap-2}
+% \inferrule{
+%   \hsyn{\hGamma}{\hexp_1}{\tehole}\\
+%   \hana{\hGamma}{\hexp_2}{\tehole}
+% }{
+%   \hsyn{\hGamma}{\hap{\hexp_1}{\hexp_2}}{\tehole}
+% }
+% \end{equation}
 
 \todo{redundant text w/ citation}
 The hole type behaves much like the type $?$ in prior work by Siek and Taha on gradual types for functional languages \cite{Siek06a}. Their system (which was not bidirectionally typed nor an editor model) also needed to define two rules for function application. In general, when a premise requires that a synthesized type be of a particular form, we need a special case where the synthesized hole type is treated instead as if it were the ``holey-est'' type of that form.\footnote{Alternatively, we might add a rule that allows expressions that synthesize hole type to then non-deterministically synthesize any other type, but maintaining determinism is useful in practice, so we avoid this approach.}
